--- a/playbook.yml
+++ b/playbook.yml
@@ -1,8 +1,9 @@
 - hosts: terraform-ansible
   tasks:
-  - name: Creating file
-    copy: 
-      dest: /home/ubuntu/index.html
-      content: <h1>Done with Terraform and Ansible</h1>
-  - name: Creating server
-    shell: "nohup busyhop httpd -f -p 8080 &"
+  - name: Installing python3 and venv
+    apt:
+      pkg:
+      - python3
+      - virtualenv
+      update_cache: yes
+    become: yes
