--- a/playbook.yml
+++ b/playbook.yml
@@ -7,3 +7,9 @@
       - virtualenv
       update_cache: yes
     become: yes
+  - name: Installing dependencies with pip
+    pip:
+      virtualenv: /home/ubuntu/application/venv
+      name:
+        - django
+        - djangorestframework
